Added HomeScreen and updated MainActivity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+Written By: Sumedh Sen
+Date: 12/26/2019
+ -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -18,10 +22,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="NotiFOREX!"
+        android:text="NotiFOREX"
         android:layout_gravity="center"
         android:layout_marginTop="150dp"
-        android:textSize="30sp"
+        android:textSize="35sp"
         />
 
 </LinearLayout>
